# haskell-conll

./: .gitignore  README.md  haskell-conll.cabal  package.yaml  stack.yaml  stylish-haskell.yaml
.stack-work/install/x86_64-linux/lts-8.22/8.0.2/doc/haskell-conll-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-8.22/8.0.2/pkgdb/: haskell-conll-0.1.0.0-CSTI7tPyX32627TPrQeUro.conf  package.cache
src/Data/: Conll.hs  ConllToken.hs  ParsedSentence.hs  SyntaxTree.hs  TagLabel.hs
src/Model/: NerCoreNlp.hs  PennTreebank.hs  UniversalTreebank.hs
